<resources>
    <string name="app_name">MedProject</string>

    <!-- Strings related to login -->
    <string name="menu_settings">Settings</string>
    <string name="aboutApp">O aplikacji</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signIn">zaloguj</string>
    <string name="signUp">zarejestruj</string>
    <string name="register">zarejestruj</string>
    <string name="diabetic">poziom cukru</string>
    <string name="bloodPresure">ciśnienie krwi</string>
    <string name="add">dodaj</string>
    <string name="param1">ciśnienie skurczowe</string>
    <string name="param2">ciśnienie rozkurczowe</string>
    <string name="results">twoje wyniki</string>
    <string name="addData">zapisz</string>
    <string name="setTime">ustaw</string>
</resources>
